<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/uTrack"
        android:icon="@drawable/maps"
        android:title="@string/uTrack"/>

    <item
        android:id="@+id/uBeingTracked"
        android:icon="@drawable/compass"
        android:title="@string/uBeingTracked"/>

    <item
        android:id="@+id/add_user"
        android:icon="@drawable/add"
        android:title="@string/add_user"/>


    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/profile"
                android:icon="@drawable/profile"
                android:title="@string/Profile"/>

            <item
                android:id="@+id/settings"
                android:icon="@drawable/settings"
                android:title="@string/settings"/>
        </menu>
    </item>
</menu>