<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <LinearLayout
        android:id="@+id/layoutBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back"
            android:tint="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:text="@string/Profile"
            android:textColor="@color/white"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutBar"
        app:layout_constraintVertical_bias="0.0">

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/avatar"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfileSettings"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/no_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textAvatar"
            app:riv_oval="true" />

        <Button
            android:id="@+id/downloadImage"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rokkitt"
            android:text="@string/downloadImage"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageProfileSettings"
            app:layout_constraintTop_toBottomOf="@id/textAvatar" />


        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="25dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/imageProfileSettings" />

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/changePass"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/oldPass"
            android:layout_width="280dp"
            android:layout_height="?actionBarSize"
            android:hint="@string/oldPassText"
            android:inputType="text"
            app:met_floatingLabel="normal"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textPassword"
            android:layout_marginTop="15dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/newPass1"
            android:layout_width="280dp"
            android:layout_height="?actionBarSize"
            android:hint="@string/newPassText"
            android:inputType="text"
            app:met_floatingLabel="normal"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/oldPass"
            android:layout_marginTop="10dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/newPass2"
            android:layout_width="280dp"
            android:layout_height="?actionBarSize"
            android:hint="@string/repeatPassText"
            android:inputType="text"
            app:met_floatingLabel="normal"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newPass1"
            android:layout_marginTop="10dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"/>

        <Button
            android:id="@+id/btnChangePass"
            android:layout_width="108dp"
            android:layout_height="43dp"
            android:background="@drawable/btn_sgin_disable"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/changePassText"
            android:textAllCaps="false"
            android:textColor="@color/text_button_notactive"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/newPass2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"/>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="25dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/btnChangePass" />

        <TextView
            android:id="@+id/textInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/textInfoSettings"
            android:textColor="@color/reject"
            android:textSize="15sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/textInfo"
            android:layout_marginTop="5dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>