<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Authentication">


    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/rokkitt"
        android:gravity="center_horizontal"
        android:text="@string/authentication"
        android:textAlignment="center"
        android:textColor="@color/text_authentication"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="108dp"
        android:layout_height="43dp"
        android:background="@drawable/btn_sgin_disable"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/btnSignIn"
        android:textAllCaps="false"
        android:textColor="@color/text_button_notactive"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnGoSignUp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="42dp"/>


    <Button
        android:id="@+id/btnGoSignUp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/rokkitt"
        android:text="@string/text_bottom"
        android:textAllCaps="false"
        android:textColor="@color/text_bottom"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_margin="30dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btnSignIn"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignIn">

        <EditText
            android:id="@+id/EditLoginAuth"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:gravity="center_horizontal"
            android:hint="@string/login"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/frame"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:importantForAutofill="no"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"/>

        <EditText
            android:id="@+id/EditPassAuth"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:gravity="center_horizontal"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/frame"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>