<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@drawable/header"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageProfile"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_oval="true"
        android:src="@drawable/no_photo"/>

        <TextView
            android:id="@+id/Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imageProfile"
            app:layout_constraintStart_toStartOf="@id/imageProfile"
            android:layout_marginTop="10dp"
            android:text="@string/ID"
            android:textStyle="bold"
            android:fontFamily="@font/rokkitt"
            android:textSize="18.5sp"
            android:textColor="@color/text_bottom"/>

        <TextView
            android:id="@+id/userId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/Id"
            app:layout_constraintTop_toTopOf="@id/Id"
            app:layout_constraintBottom_toBottomOf="@id/Id"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textSize="20.5sp"
            android:textColor="@color/id_text"
            android:fontFamily="@font/rokkitt"
            android:textStyle="bold"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/showRootWindow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Id"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/part1"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userTrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rokkitt"
                android:textColor="@color/yellow"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sen"
                android:textColor="@color/yellow"
                android:fontFamily="@font/rokkitt"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/part2"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/part1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn1"
                android:background="@drawable/btn_sign_active"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/accept"
                android:textAllCaps="false"
                android:fontFamily="@font/rokkitt"
                android:textColor="@color/accept"
                android:textStyle="bold"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="9dp"/>

            <Button
                android:id="@+id/btn2"
                android:background="@drawable/btn_sign_active"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/reject"
                android:textAllCaps="false"
                android:fontFamily="@font/rokkitt"
                android:textColor="@color/reject"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>